--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dashboard with Auto-Detected Weather</title>
+  <title>Dashboard (Decision Support System)</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     rel="stylesheet"
@@ -51,45 +51,55 @@
     .welcome-message {
       margin-bottom: 2rem;
     }
-    .earthquake-section {
-      margin-top: 2rem;
+    .gauges-section {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 1rem;
+      margin-bottom: 2rem;
     }
-    .earthquake-section h3 {
-      font-weight: 600;
-      font-size: 1.4rem;
-      color: #2e7d32;
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #a5d6a7;
-      padding-bottom: 0.5rem;
-    }
-    .earthquake-list {
+    .gauge {
+      position: relative;
+      width: 160px;
+      height: 160px;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
-    }
-    .earthquake-item {
-      background: linear-gradient(135deg, #e8f5e8 0%, #c8e6c9 100%);
+      align-items: center;
+      background: white;
       border-radius: 12px;
-      padding: 1rem 1.5rem;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-left: 5px solid #4caf50;
-      transition: transform 0.2s ease;
+      padding: 1rem;
     }
-    .earthquake-item:hover {
-      transform: translateY(-2px);
+    .gauge svg {
+      width: 100%;
+      height: 100%;
     }
-    .earthquake-item .magnitude {
+    .gauge circle {
+      fill: none;
+      stroke-width: 15;
+    }
+    .gauge .background {
+      stroke: #e0e0e0;
+    }
+    .gauge .progress {
+      stroke: #4caf50;
+      stroke-linecap: round;
+      transition: stroke-dasharray 0.5s ease;
+    }
+    .gauge-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       font-weight: 700;
       font-size: 1.2rem;
-      color: #d32f2f;
-      margin-bottom: 0.5rem;
-    }
-    .earthquake-item .details {
-      font-size: 0.95rem;
-      color: #555;
-    }
-    .earthquake-item .details strong {
       color: #2e7d32;
+      text-align: center;
+    }
+    .gauge-label {
+      margin-top: 0.5rem;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #558b2f;
     }
     .weather-panel {
       width: 320px;
@@ -164,11 +174,13 @@
         border-radius: 12px;
         padding: 1.6rem 2rem;
       }
-      .earthquake-list {
+      .gauges-section {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
         gap: 0.8rem;
       }
-      .earthquake-item {
-        padding: 0.8rem 1.2rem;
+      .gauge {
+        width: 120px;
+        height: 120px;
       }
     }
   </style>
@@ -184,10 +196,30 @@
           widgets, charts, or other content.
         </p>
       </div>
-      <section class="earthquake-section">
-        <h3> PHIVOLCS Earthquake Recordings</h3>
-        <div class="earthquake-list" id="earthquake-list">
-          Loading earthquake data...
+      <section class="gauges-section">
+        <div class="gauge" id="temperature-gauge">
+          <svg viewBox="0 0 160 160">
+            <circle cx="80" cy="80" r="60" class="background" />
+            <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" />
+          </svg>
+          <div class="gauge-text">0.0 °C</div>
+          <div class="gauge-label">Temperature</div>
+        </div>
+        <div class="gauge" id="humidity-gauge">
+          <svg viewBox="0 0 160 160">
+            <circle cx="80" cy="80" r="60" class="background" />
+            <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" />
+          </svg>
+          <div class="gauge-text">0.0 %</div>
+          <div class="gauge-label">Humidity</div>
+        </div>
+        <div class="gauge" id="nn-risk-gauge">
+          <svg viewBox="0 0 160 160">
+            <circle cx="80" cy="80" r="60" class="background" />
+            <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" />
+          </svg>
+          <div class="gauge-text">0.0</div>
+          <div class="gauge-label">Neural Network Risk</div>
         </div>
       </section>
     </main>
@@ -201,7 +233,7 @@
   </div>
 
   <script>
-    // Weather functions (unchanged)
+    // Weather functions
     function getWeatherEmoji(code) {
       const emojis = {
         0: "☀️",
@@ -294,7 +326,6 @@
           if (idx !== -1) humidity = hourlyHum[idx];
         }
 
-        // Reverse geocode location using Nominatim (OSM)
         let locationName = `Lat: ${lat.toFixed(3)}, Lon: ${lon.toFixed(3)}`;
         try {
           const geoResp = await fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`,
@@ -304,7 +335,6 @@
         if (geoData.address) {
           const addr = geoData.address;
           
-          // Priority order for PH locations
           const possibleNames = [
             addr.city,
             addr.town,
@@ -365,7 +395,6 @@
             fetchWeather(latitude, longitude);
           },
           () => {
-            // Default to Cabuyao City
             fetchWeather(14.2786, 121.1244);
           },
           { enableHighAccuracy: false, timeout: 5000 }
@@ -375,41 +404,7 @@
       }
     }
 
-    // Earthquake functions
-    async function fetchEarthquakes() {
-      const listElem = document.getElementById("earthquake-list");
-      try {
-        const response = await fetch("https://earthquake.phivolcs.dost.gov.ph/api/earthquake/latest");
-        if (!response.ok) throw new Error("Failed to fetch earthquakes");
-        const data = await response.json();
-        // Assuming data is an array of earthquakes, take first 5
-        const earthquakes = data.slice(0, 5);
-        const html = earthquakes.map(eq => {
-          const dateTime = new Date(eq.datetime);
-          const date = dateTime.toLocaleDateString();
-          const time = dateTime.toLocaleTimeString();
-          return `
-            <div class="earthquake-item">
-              <div class="magnitude">Magnitude: ${eq.magnitude}</div>
-              <div class="details">
-                <strong>Location:</strong> ${eq.location}<br>
-                <strong>Date:</strong> ${date} | <strong>Time:</strong> ${time}<br>
-                <strong>Depth:</strong> ${eq.depth} km | <strong>Latitude:</strong> ${eq.latitude} | <strong>Longitude:</strong> ${eq.longitude}
-              </div>
-            </div>
-          `;
-        }).join("");
-        listElem.innerHTML = html;
-      } catch (error) {
-        listElem.innerHTML = "Error loading earthquake data.";
-        console.error(error);
-      }
-    }
-
-    window.addEventListener("DOMContentLoaded", () => {
-      autoDetectLocation();
-      fetchEarthquakes();
-    });
+    window.addEventListener("DOMContentLoaded", autoDetectLocation);
   </script>
 </body>
 </html>
