--- a/index.html
+++ b/index.html
@@ -1,38 +1,438 @@
-from flask import Flask, jsonify
-from flask_cors import CORS
-import random
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dashboard (Decision Support System)</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet"
+  />
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: "Roboto", sans-serif;
+      background-color: #f4f7f6;
+      color: #333;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      background-color: #2e7d32;
+      color: white;
+      padding: 1rem 2rem;
+      font-weight: 700;
+      font-size: 1.8rem;
+      user-select: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .container {
+      flex: 1;
+      display: flex;
+      padding: 1.5rem 2rem;
+      gap: 2rem;
+      overflow: hidden;
+    }
+    .main-content {
+      flex: 1;
+      background: white;
+      border-radius: 12px;
+      padding: 2rem 2.5rem;
+      box-shadow: 0 8px 16px rgb(0 0 0 / 0.1);
+      overflow-y: auto;
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #444;
+    }
+    .welcome-message {
+      margin-bottom: 2rem;
+    }
+    .welcome-message h2 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1.4rem;
+      color: #2e7d32;
+    }
+    .welcome-message p {
+      margin: 0 0 1rem 0;
+      font-size: 0.9rem;
+      color: #555;
+    }
+    .welcome-message ul {
+      margin: 0;
+      padding-left: 1rem;
+      list-style: none;
+    }
+    .welcome-message li {
+      margin-bottom: 0.25rem;
+      font-weight: 500;
+    }
+    .gauges-section {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+    .gauge {
+      position: relative;
+      width: 350px;
+      height: 160px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 1rem;
+    }
+    .gauge svg {
+      width: 100%;
+      height: 100%;
+    }
+    .gauge circle {
+      fill: none;
+      stroke-width: 15;
+    }
+    .gauge .background {
+      stroke: #e0e0e0;
+    }
+    .gauge .progress {
+      stroke: #2196f3;
+      stroke-linecap: round;
+      transition: stroke-dasharray 0.5s ease;
+    }
+    .gauge-text {
+      position: absolute;
+      top: 43%; 
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-weight: 700;
+      font-size: 1.2rem;
+      color: #2196f3;
+      text-align: center;
+    }
+    .gauge-label {
+      margin-top: 0.5rem;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #2196f3;
+    }
+    .weather-panel {
+      width: 320px;
+      background-color: white;
+      border-radius: 20px;
+      box-shadow: 0 12px 30px rgb(46 125 50 / 0.3);
+      display: flex;
+      flex-direction: column;
+      padding: 1.8rem 2rem;
+      user-select: none;
+      font-weight: 500;
+      color: #2e7d32;
+    }
+    .weather-panel h2 {
+      font-weight: 600;
+      font-size: 1.3rem;
+      margin: 0 0 1.8rem 0;
+      color: #2e7d32;
+      border-bottom: 2px solid #a5d6a7;
+      padding-bottom: 0.3rem;
+      letter-spacing: 0.03em;
+    }
+    .weather-info {
+      display: flex;
+      flex-direction: column;
+      gap: 1.1rem;
+      font-size: 1.1rem;
+    }
+    .weather-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #d3e4cd;
+      padding-bottom: 0.3rem;
+      line-height: 1.3;
+    }
+    .weather-row:last-child {
+      border-bottom: none;
+    }
+    .weather-label {
+      font-weight: 600;
+      color: #558b2f;
+    }
+    .weather-value {
+      font-weight: 700;
+      color: #2e7d32;
+      display: flex;
+      align-items: center;
+      gap: 0.4rem;
+    }
+    .weather-emoji {
+      font-size: 2rem;
+      user-select: none;
+    }
+    .main-content::-webkit-scrollbar {
+      width: 10px;
+    }
+    .main-content::-webkit-scrollbar-thumb {
+      background-color: #9ccc65;
+      border-radius: 8px;
+    }
+    @media (max-width: 800px) {
+      .container {
+        flex-direction: column;
+        padding: 1rem 1.2rem;
+      }
+      .weather-panel {
+        width: 100%;
+        margin-top: 1.8rem;
+      }
+      .main-content {
+        border-radius: 12px;
+        padding: 1.6rem 2rem;
+      }
+      .gauges-section {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+        gap: 0.8rem;
+      }
+      .gauge {
+        width: 120px;
+        height: 120px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>Dashboard (Decision Support System)</header>
 
-app = Flask(__name__)
-CORS(app)  # Enable CORS so your index.html can fetch data
+  <div class="container">
+    <main class="main-content">
+      <div class="welcome-message">
+        <h2>Gauge Color Legend</h2>
+        <p>According to CDRRMO Heat Indices Thresholds:</p>
+        <ul>
+          <li><span style="color: #4caf50;">Green:</span> Caution (27-32°C) - Low risk</li>
+          <li><span style="color: #ff9800;">Yellow:</span> Extreme Caution (33-41°C) - Higher risk</li>
+          <li><span style="color: #ff5722;">Orange:</span> Danger (42-51°C) - Likely heat issues</li>
+          <li><span style="color: #f44336;">Red:</span> Extreme Danger (52°C+) - High risk of heat stroke</li>
+        </ul>
+      </div>
+      <section class="gauges-section">
+        <div class="gauge" id="temperature-gauge">
+          <svg viewBox="0 0 160 160">
+            <circle cx="80" cy="80" r="60" class="background" />
+            <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" transform="rotate(90 80 80)" />
+          </svg>
+          <div class="gauge-text">0.0°C</div>
+          <div class="gauge-label">Temperature</div>
+        </div>
+        <div class="gauge" id="humidity-gauge">
+          <svg viewBox="0 0 160 160">
+            <circle cx="80" cy="80" r="60" class="background" />
+            <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" transform="rotate(90 80 80)" />
+          </svg>
+          <div class="gauge-text">0.0%</div>
+          <div class="gauge-label">Humidity</div>
+        </div>
+        <div class="gauge" id="nn-risk-gauge">
+          <svg viewBox="0 0 160 160">
+            <circle cx="80" cy="80" r="60" class="background" />
+            <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" transform="rotate(90 80 80)" />
+          </svg>
+          <div class="gauge-text">0.0</div>
+          <div class="gauge-label">Neural Network Risk</div>
+        </div>
+      </section>
+    </main>
 
-# --- Simulated sensor data ---
-def get_sensor_data():
-    return {
-        # "temperature": round(random.uniform(24.0, 35.0), 1),
-        # "humidity": round(random.uniform(40.0, 85.0), 1)
+    <section class="weather-panel" aria-label="Weather information">
+      <h2 id="location">Detecting location...</h2>
+      <div class="weather-info" id="weather-info">
+        Fetching weather data...
+      </div>
+    </section>
+  </div>
 
-        # Manual fixed values for testing
-        "temperature": 43.0, 
-        "humidity": 55.0,
+  <script>
+    // Weather emoji and description maps
+    const weatherEmojis = {
+      0: "☀️", 1: "🌤️", 2: "⛅", 3: "☁️", 45: "🌫️", 48: "🌫️",
+      51: "🌦️", 53: "🌦️", 55: "🌦️", 56: "🌨️", 57: "🌨️",
+      61: "🌧️", 63: "🌧️", 65: "🌧️", 66: "🌨️", 67: "🌨️",
+      71: "❄️", 73: "❄️", 75: "❄️", 77: "❄️", 80: "🌧️",
+      81: "🌧️", 82: "🌧️", 85: "❄️", 86: "❄️", 95: "⛈️",
+      96: "⛈️", 99: "⛈️"
+    };
+
+    const weatherDescriptions = {
+      0: "Clear sky", 1: "Mainly clear", 2: "Partly cloudy", 3: "Overcast",
+      45: "Fog", 48: "Depositing rime fog", 51: "Light drizzle", 53: "Moderate drizzle",
+      55: "Dense drizzle", 56: "Light freezing drizzle", 57: "Dense freezing drizzle",
+      61: "Slight rain", 63: "Moderate rain", 65: "Heavy rain", 66: "Light freezing rain",
+      67: "Heavy freezing rain", 71: "Slight snowfall", 73: "Moderate snowfall",
+      75: "Heavy snowfall", 77: "Snow grains", 80: "Slight rain showers",
+      81: "Moderate rain showers", 82: "Violent rain showers", 85: "Slight snow showers",
+      86: "Heavy snow showers", 95: "Thunderstorm", 96: "Thunderstorm with slight hail",
+      99: "Thunderstorm with heavy hail"
+    };
+
+    // Utility function to convert m/s to kph
+    function msToKph(ms) {
+      return (ms * 3.6).toFixed(1);
     }
 
-# --- API Endpoints ---
-@app.route("/temperature")
-def temperature():
-    data = get_sensor_data()
-    return jsonify({"temperature": data["temperature"]})
+    // Fetch weather data from API
+    async function fetchWeather(lat, lon) {
+      const locationElem = document.getElementById("location");
+      const infoElem = document.getElementById("weather-info");
+      locationElem.textContent = "Fetching weather for your location...";
 
-@app.route("/humidity")
-def humidity():
-    data = get_sensor_data()
-    return jsonify({"humidity": data["humidity"]})
+      try {
+        const url = `https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&hourly=relative_humidity_2m&timezone=auto`;
+        const response = await fetch(url);
+        if (!response.ok) throw new Error("Failed to fetch weather");
 
-@app.route("/nn_risk")
-def nn_risk():
-    # Dummy Neural Network risk value 0-1
-    value = round(random.uniform(0, 1), 2)
-    return jsonify({"nn_risk": value})
+        const data = await response.json();
+        const current = data.current_weather;
+        const hourlyHum = data.hourly.relative_humidity_2m;
+        const hourlyTime = data.hourly.time;
 
-# --- Run server ---
-if __name__ == "__main__":
-    app.run(host="127.0.0.1", port=5000, debug=True)
+        let humidity = null;
+        if (hourlyHum && hourlyTime) {
+          const idx = hourlyTime.indexOf(current.time);
+          if (idx !== -1) humidity = hourlyHum[idx];
+        }
+
+        // Reverse geocode location
+        let locationName = `Lat: ${lat.toFixed(3)}, Lon: ${lon.toFixed(3)}`;
+        try {
+          const geoResp = await fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`, {
+            headers: { "User-Agent": "YourAppName/1.0" }
+          });
+          const geoData = await geoResp.json();
+          if (geoData.address) {
+            const addr = geoData.address;
+            const possibleNames = [addr.city, addr.town, addr.municipality, addr.village, addr.suburb, addr.city_district, addr.county, addr.state, addr.region];
+            const bestMatch = possibleNames.find(x => x);
+            if (bestMatch) {
+              locationName = bestMatch;
+              if (addr.country) locationName += ", " + addr.country;
+            }
+          }
+        } catch (err) {
+          console.warn("Reverse geocoding failed:", err);
+        }
+
+        locationElem.textContent = `Weather in ${locationName}`;
+
+        const emoji = weatherEmojis[current.weathercode] || "❓";
+        const description = weatherDescriptions[current.weathercode] || "Unknown weather";
+
+        infoElem.innerHTML = `
+          <div class="weather-row">
+            <span class="weather-label">Temperature</span>
+            <span class="weather-value">${current.temperature}°C</span>
+          </div>
+          <div class="weather-row">
+            <span class="weather-label">Windspeed</span>
+            <span class="weather-value">${msToKph(current.windspeed)} kph</span>
+          </div>
+          <div class="weather-row">
+            <span class="weather-label">Humidity</span>
+            <span class="weather-value">${humidity !== null ? humidity + "%" : "N/A"}</span>
+          </div>
+          <div class="weather-row">
+            <span class="weather-label">Weather</span>
+            <span class="weather-value">${description} <span class="weather-emoji" aria-label="${description}">${emoji}</span></span>
+          </div>
+        `;
+      } catch (error) {
+        locationElem.textContent = "Weather information unavailable";
+        infoElem.textContent = "Error fetching weather data.";
+        console.error("Weather fetch error:", error);
+      }
+    }
+
+    // Auto-detect location and fetch weather
+    function autoDetectLocation() {
+      if ("geolocation" in navigator) {
+        navigator.geolocation.getCurrentPosition(
+          (pos) => fetchWeather(pos.coords.latitude, pos.coords.longitude),
+          () => fetchWeather(14.2786, 121.1244), // Default to Cabuyao City
+          { enableHighAccuracy: false, timeout: 5000 }
+        );
+      } else {
+        fetchWeather(14.2786, 121.1244);
+      }
+    }
+
+    //Function to determine gauge color based on value and type
+    function getGaugeColor(value, type) {
+      if (type === 'temperature') {
+      if (value >= 52) return '#f44336';   // Extreme Danger
+      if (value >= 42) return '#ff5722';   // Danger
+      if (value >= 33) return '#ff9800';   // Extreme Caution
+      if (value >= 27) return '#4caf50';   // Caution
+      return '#2196f3';                    // Below 27°C (Optional: blue)
+
+    //Do the same for humidity
+    } else if (type === 'humidity') {
+      if (value >= 52) return '#f44336';
+      if (value >= 42) return '#ff5722';  //Same color
+      if (value >= 33) return '#f9800';
+      if (value >= 27) return '#4caf50';
+      return '#2196f3';
+
+    } else if (type === 'nn_risk') {
+      const percent = value * 100;
+      if (percent > 80) return '#f44336';
+      if (percent > 60) return '#ff9800';
+      return '#4caf50';
+    }
+    return '#4caf50';
+  }
+
+    // Update gauge function (reusable)
+    async function updateGauge(endpoint, gaugeId, unit, maxValue, type) {
+      try {
+        const resp = await fetch(`http://127.0.0.1:5000/${endpoint}`);
+        const data = await resp.json();
+
+        // --- extract the real number ---
+        let value = data[endpoint];
+        if (typeof value === 'object') value = value[endpoint]; // unwrap {"temperature":30.2}
+        // ---------------------------------
+
+        const gaugeText = document.querySelector(`#${gaugeId} .gauge-text`);
+        gaugeText.textContent = `${value.toFixed(1)} ${unit}`;
+
+        const circle = document.querySelector(`#${gaugeId} .progress`);
+        const radius = circle.r.baseVal.value;
+        const circumference = 2 * Math.PI * radius;
+        const percent = Math.min(value / maxValue, 1);
+        circle.style.strokeDasharray = `${percent * circumference} ${circumference}`;
+
+        const color = getGaugeColor(value, type);
+        circle.style.stroke = color;
+      } catch (e) {
+        console.error(`Error updating ${gaugeId}:`, e);
+      }
+    }
+    // Update gauges periodically
+    function updateGauges() {
+      updateGauge("temperature", "temperature-gauge", "°C", 100, "temperature");
+      updateGauge("humidity", "humidity-gauge", "%", 100, "humidity");
+      // Add NN risk if endpoint exists: updateGauge("nn_risk", "nn-risk-gauge", "", 1);
+    }
+
+    // Initialize on page load
+    window.addEventListener("DOMContentLoaded", () => {
+      autoDetectLocation();
+      updateGauges();
+      setInterval(updateGauges, 500);
+    });
+  </script>
+</body>
+</html>
