--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <circle cx="80" cy="80" r="60" class="progress" stroke-dasharray="0 376.99" transform="rotate(90 80 80)" />
           </svg>
           <div class="gauge-text">0.0</div>
-          <div class="gauge-label">Neural Network Risk</div>
+          <div class="gauge-label">Heat Index</div>
         </div>
       </section>
     </main>
@@ -436,3 +436,4 @@
   </script>
 </body>
 </html>
+
