--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GLB Viewer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3D Sensor Dashboard</title>
+    <link rel="stylesheet" href="index.css">
 
-  <link rel="stylesheet" href="index.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
-  <!-- Import Map for Three.js modules -->
-  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-  <script type="importmap">
-  {
-    "imports": {
-      "three": "https://unpkg.com/three@0.163.0/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@0.163.0/examples/jsm/"
+    <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.163.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.163.0/examples/jsm/",
+            "chart.js/auto": "https://cdn.jsdelivr.net/npm/chart.js@4.4.2/+esm",
+            "firebase/app": "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js",
+            "firebase/firestore": "https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js"
+        }
     }
-  }
-  </script>
+    </script>
 </head>
 <body>
-  <header class="top-header">
-    Dashboard – Decision Support System
-  </header>
 
-  <div class="viewer-wrapper">
-    <div class="viewer-card">
-      <div id="canvas-container"></div>
+    <div class="container">
+        <div class="left-panel">
+            <div id="canvas-container"></div>
+            <div id="loading-overlay">Loading Model...</div>
+        </div>
 
-      <div class="status-bar">
-        <div>Temp: <span id="temp">-- °C</span></div>
-        <div>Humidity: <span id="hum">-- %</span></div>
-        <div>Model Status: <span id="load-status">Loading…</span></div>
-        <!-- <div>Materials Found:</div> -->
-        <!-- <div id="materials">Scanning…</div> -->
-      </div>
+        <div class="right-panel">
+            <header>
+                <h1>System Monitor</h1>
+                <p>Real-time Sensor Data</p>
+            </header>
+
+            <div class="data-cards">
+                <div class="card">
+                    <h3>Temperature</h3>
+                    <div class="value"><span id="temp-val">--</span> °C</div>
+                </div>
+                <div class="card">
+                    <h3>Humidity (Press.)</h3>
+                    <div class="value"><span id="hum-val">--</span> hPa</div>
+                </div>
+                <div class="card">
+                    <h3>Heat Index</h3>
+                    <div class="value"><span id="hi-val">--</span> °C</div>
+                </div>
+            </div>
+
+            <div class="chart-container">
+                <canvas id="sensorChart"></canvas>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <!-- Main JS module (just like the sample project) -->
-  <script type="module" src="./main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
