--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <h2 class="sidebar-title">Dashboard</h2>
 
             <nav class="nav-links">
-                <a href="#">Room 1</a>
-                <a href="#">Room 2</a>
+                <a href="#" data-room="room1" class="room-link active">Room 1</a>
+                <a href="#" data-room="room2" class="room-link">Room 2</a>
             </nav>
         </aside>
 
